@@ -1,18 +1,17 @@
 package com.example.backend.controller;
 
+import com.example.backend.dto.PostRequest;
+import com.example.backend.dto.PostResponse;
 import com.example.backend.entity.Post;
 import com.example.backend.entity.User;
 import com.example.backend.repository.PostRepository;
-import com.example.backend.repository.UserRepository;
-import com.example.backend.dto.PostRequest;
-import com.example.backend.dto.PostResponse;
-
+import jakarta.servlet.http.HttpSession;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/posts")
@@ -20,26 +19,19 @@ import java.util.List;
 public class PostController {
 
     private final PostRepository postRepository;
-    private final UserRepository userRepository;
 
     @GetMapping
-    public List<PostResponse> getAllPosts() {
-        return postRepository.findAll().stream()
+    public List<PostResponse> getAll() {
+        return postRepository.findAll()
+                .stream()
                 .map(PostResponse::from)
-                .toList();
-    }
-
-    @GetMapping("/{id}")
-    public PostResponse getPostById(@PathVariable Long id) {
-        Post post = postRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Post not found"));
-        return PostResponse.from(post);
+                .collect(Collectors.toList());
     }
 
     @PostMapping
-    public PostResponse createPost(@RequestBody PostRequest request) {
-        User user = userRepository.findById(request.userId())
-                .orElseThrow(() -> new RuntimeException("User not found"));
+    public PostResponse create(@RequestBody PostRequest request, HttpSession session) {
+        User user = (User) session.getAttribute("user");
+        if (user == null) throw new RuntimeException("Unauthorized");
 
         Post post = Post.builder()
                 .user(user)
@@ -52,23 +44,18 @@ public class PostController {
         return PostResponse.from(saved);
     }
 
-    @PutMapping("/{id}")
-    public PostResponse updatePost(@PathVariable Long id, @RequestBody PostRequest request) {
-        Post post = postRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Post not found"));
-
-        post.setTitle(request.title());
-        post.setContent(request.content());
-
-        Post updated = postRepository.save(post);
-        return PostResponse.from(updated);
-    }
-
     @DeleteMapping("/{id}")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    public void deletePost(@PathVariable Long id) {
+    public void delete(@PathVariable Long id, HttpSession session) {
+        User user = (User) session.getAttribute("user");
+        if (user == null) throw new RuntimeException("Unauthorized");
+
         Post post = postRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Post not found"));
+
+        if (!post.getUser().getId().equals(user.getId())) {
+            throw new RuntimeException("Forbidden");
+        }
+
         postRepository.delete(post);
     }
 }
